--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
+    "js-url": "^2.3.0",
     "leancloud-storage": "^3.7.3",
+    "process-nextick-args": "^2.0.0",
     "qiniu-js": "^1.0.24"
   },
   "devDependencies": {
